--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 	<link rel="stylesheet" href="css/main.css" type="text/css"/>
+	<script type="text/javascript" src="js/singletonPattern.js"></script>
+
 </head>
 
 <body>
